--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HataPlus</title>
+    <title>HataPlus Email</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -30,10 +30,10 @@
                             <table class="header" cellpadding="0" cellspacing="0" align="center">
                                 <tr>
                                     <td class="logo" align="left">
-                                        <img src='img/logo.png' alt='Логотип компанії "Хата Плюс"'>
+                                        <img src='https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/logo.png' alt='Логотип компанії "Хата Плюс"'>
                                     </td>
                                     <td class="contacts" align="right">
-                                        <p><img class="phone" src="img/phone.png"><b>+38(097) 100-25-25</b></p>
+                                        <p><img class="phone" src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/phone.png"><b>+38(097) 100-25-25</b></p>
                                         <p><i>контактний телефон у Вашому місті</i></p>
                                     </td>
                                 </tr>
@@ -42,7 +42,7 @@
                     </tr>
                     <tr>
                         <td class="proposition">
-                            <img src="img/proposition.png" alt="Акція">
+                            <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/proposition.png" alt="Акція">
                         </td>
                     </tr>
                     <tr>
@@ -73,13 +73,13 @@
                             <table class="advantage" cellpadding="0" cellspacing="0" align="center">
                                 <tr>
                                     <td class="top-column" align="center">
-                                        <img src="img/convenient_location.png" alt="иконка pin">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/convenient_location.png" alt="іконка pin">
                                     </td>
                                     <td class="top-column" align="center">
-                                        <img src="img/wide_choose.png" alt="иконка будинка">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/wide_choose.png" alt="іконка будинка">
                                     </td>
                                     <td class="top-column" align="center">
-                                        <img src="img/wild_nature.png" alt="иконка ялинка">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/wild_nature.png" alt="іконка ялинка">
                                     </td>
                                 </tr>
                                 <tr>
@@ -116,7 +116,7 @@
                             <table class="projects" cellpadding="0" cellspacing="0" align="center">
                                 <tr>
                                     <td class="left-column house line">
-                                        <img src="img/montreal.png" alt="котедж Montreal">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/montreal.png" alt="котедж Montreal">
                                     </td>
                                     <td class="right-column description-house line">
                                         <h3>MONTREAL (332 м<sup>2</sup>)</h3>
@@ -151,12 +151,12 @@
                                         </p>
                                     </td>
                                     <td class="right-column house line">
-                                        <img src="img/edmonton.png" alt="будинок Edmonton">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/edmonton.png" alt="будинок Edmonton">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="left-column house">
-                                        <img src="img/calgary.png" alt="котедж Calgary">
+                                        <img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/img/calgary.png" alt="котедж Calgary">
                                     </td>
                                     <td class="right-column description-house">
                                         <h3>CALGARY (294 м<sup>2</sup>)</h3>
@@ -207,14 +207,14 @@
                         <td class="networks">
                             <table class="social" cellpadding="0" cellspacing="0" align="center">
                                 <tr>
-                                    <td><a href="#"><img src="images/tw.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/fb-blue.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/soc_icon.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/pin.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/g_plus.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/sphere.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/inst.png" alt=""></a></td>
-                                    <td><a href="#"><img src="images/points.png" alt=""></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/tw.png" alt="twitter"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/fb-blue.png" alt="facebook"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/soc_icon.png" alt="soc_network"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/pin.png" alt="pinterest"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/g_plus.png" alt="google+"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/sphere.png" alt="social"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/inst.png" alt="instagram"></a></td>
+                                    <td><a href="#"><img src="https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/points.png" alt="крапки"></a></td>
                                 </tr>
                             </table> 
                             <table class="copyright" cellpadding="0" cellspacing="0" align="center">
