--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <div class="footer-ref" align="center">
                                 <table class="footer-links" cellpadding="0" cellspacing="0" align="center">
                                     <tr>
-                                        <td class="border"><a href="#">Перейти на сайт</a></td>
+                                        <td class="border"><a href="#">Перейти на сайт</a></td><td><span>|</span></td>
                                         <td class="unsubscribe"><a href="#">Відписатися</a></td>
                                     </tr>
                                 </table>
