--- a/hata_email.html
+++ b/hata_email.html
@@ -266,7 +266,8 @@
                     <table class="footer-links" cellpadding="0" cellspacing="0" align="center" style="border-collapse: collapse;">
                       <tbody>
                         <tr>
-                          <td class="border" style="border-right-color: #fd8300; border-right-style: solid; border-right-width: 1px; padding-left: 30px; padding-right: 7px;"><a href="#" style="color: #fd8300; font-size: 11px; line-height: 18px; text-decoration: none;">Перейти на сайт</a></td>
+                          <td class="border" style="padding-left: 30px; padding-right: 7px;"><a href="#" style="color: #fd8300; font-size: 11px; line-height: 18px; text-decoration: none;">Перейти на сайт</a></td>
+                          <td><span style="color: #fd8300; font-size: 11px; line-height: 18px; text-decoration: none;">|</span></td>
                           <td class="unsubscribe" style="padding-left: 7px; padding-right: 30px;"><a href="#" style="color: #fd8300; font-size: 11px; line-height: 18px; text-decoration: none;">Відписатися</a></td>
                         </tr>
                       </tbody>
